--- a/Handin2_LAskab.Applikation/Handin2_LAskab.Applikation.csproj
+++ b/Handin2_LAskab.Applikation/Handin2_LAskab.Applikation.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.14" />
+    <PackageReference Include="NUnit" Version="3.13.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Handin2_LAdeskab\Handin2_LAdeskab.csproj" />
   </ItemGroup>
 
