--- a/Handin2_LAdeskab.Test/Handin2_LAdeskab.Test.csproj
+++ b/Handin2_LAdeskab.Test/Handin2_LAdeskab.Test.csproj
@@ -19,5 +19,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Handin2_LAdeskab\Handin2_LAdeskab.csproj" />
   </ItemGroup>
+	<PropertyGroup>
+		<GenerateProgramFile>false</GenerateProgramFile>
+	</PropertyGroup>
 
 </Project>
