--- a/Handin2_LAdeskab.Test/Handin2_LAdeskab.Test.csproj
+++ b/Handin2_LAdeskab.Test/Handin2_LAdeskab.Test.csproj
@@ -2,24 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
+	<RootNamespace>Handin2_LAdeskab.Test</RootNamespace>
     <IsPackable>false</IsPackable>
-
-    <OutputType>Exe</OutputType>
-
-	  <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
 	
 
   <ItemGroup>
     <PackageReference Include="NSubstitute" Version="4.2.2" />
-    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.14" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
-
-    
+	
   <ItemGroup>
     <ProjectReference Include="..\Handin2_LAdeskab\Handin2_LAdeskab.csproj" />
   </ItemGroup>
