--- a/Handin2_LAskab.Applikation/Handin2_LAskab.Applikation.csproj
+++ b/Handin2_LAskab.Applikation/Handin2_LAskab.Applikation.csproj
@@ -3,15 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-	  
+	<RootNamespace>Handin2_LAskab.Applikation</RootNamespace>  
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
-    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.14" />
-    <PackageReference Include="NUnit" Version="3.13.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
 
   <ItemGroup>
