--- a/Handin2_LAdeskab.Test/Handin2_LAdeskab.Test.csproj
+++ b/Handin2_LAdeskab.Test/Handin2_LAdeskab.Test.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 	<RootNamespace>Handin2_LAdeskab.Test</RootNamespace>
+	<OutputType>Library</OutputType>
+	<StartupObject></StartupObject>
 	    
   </PropertyGroup>
 	
@@ -11,7 +13,7 @@
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="NunitXml.TestLogger" Version="3.0.97" />
   </ItemGroup>
 	
